--- a/BirthdayGift/index.html
+++ b/BirthdayGift/index.html
@@ -17,7 +17,23 @@
         <div class="gift-section">
             <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
             <h3 class="gift-hint">(hover over the gift)</h3>
-            <img class ="gift-img" src="images/gift-cover.png" alt="gift cover">
+            <div class ="gift-img" id="gift-img-happy"></div> 
+        </div>
+        <div class="gift-section"></div>
+            <h2 class="gift-title">How people react when uou enter the room</h2>
+            <div class="gift-img" id="gift-img-hot"></div>
+        </div>  
+        <div class="gift-section">
+            <h2 class="gift-title">If I had to describe you with ONE word</h2>
+            <div class="gift-img" id="gift-img-genius"></div>
+        </div>
+        <div class="gift-section">
+            <h2>The only person as badass as you</h2>
+            <div class="gift-img" id="gift-img-badass"></div>
+        </div>
+        <div class="gift-section">
+            <h2 class="gift-title">This one's for you</h2>
+            <div class="gift-img" id="gift-img-cheers"></div>
         </div>
 
     </body>
