Adding footer element

--- a/BirthdayGift/index.html
+++ b/BirthdayGift/index.html
@@ -35,6 +35,7 @@
             <h2 class="gift-title">This one's for you</h2>
             <div class="gift-img" id="gift-img-cheers"></div>
         </div>
+            <p id="footer">Want to create your own Birthday GIFT site? Take <a href="https://scrimba.com/learn/htmlandcss">this HTML & CSS course</a></p>
 
     </body>
 </html>
