--- a/BirthdayGift/index.html
+++ b/BirthdayGift/index.html
@@ -8,34 +8,36 @@
     </head>
 
     <body> 
-        <div id="header">
-            <h1>Today is Ronaldo's birthday</h1>
-            <img id="bff-img" src="images/ronaldo.png" alt="ronaldo is smiling while looking at the screen">
-            <h2 id="bday-age">41 years old</h2>
-            <h4 id="bday-date">05.02.2026</h4>
-        </div>
-        <div class="gift-section">
-            <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
-            <h3 class="gift-hint">(hover over the gift)</h3>
-            <div class ="gift-img" id="gift-img-happy"></div> 
-        </div>
-        <div class="gift-section"></div>
-            <h2 class="gift-title">How people react when uou enter the room</h2>
-            <div class="gift-img" id="gift-img-hot"></div>
-        </div>  
-        <div class="gift-section">
-            <h2 class="gift-title">If I had to describe you with ONE word</h2>
-            <div class="gift-img" id="gift-img-genius"></div>
-        </div>
-        <div class="gift-section">
-            <h2>The only person as badass as you</h2>
-            <div class="gift-img" id="gift-img-badass"></div>
-        </div>
-        <div class="gift-section">
-            <h2 class="gift-title">This one's for you</h2>
-            <div class="gift-img" id="gift-img-cheers"></div>
-        </div>
+        <div class="bday-page">
+            <div id="header">
+                <h1>Today is Ronaldo's birthday</h1>
+                <img id="bff-img" src="images/ronaldo.png" alt="ronaldo is smiling while looking at the screen">
+                <h2 id="bday-age">41 years old</h2>
+                <h4 id="bday-date">05.02.2026</h4>
+            </div>
+            <div class="gift-section">
+                <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
+                <h3 class="gift-hint">(hover over the gift)</h3>
+                <div class ="gift-img" id="gift-img-happy"></div> 
+            </div>
+            <div class="gift-section"></div>
+                <h2 class="gift-title">How people react when uou enter the room</h2>
+                <div class="gift-img" id="gift-img-hot"></div>
+            </div>  
+            <div class="gift-section">
+                <h2 class="gift-title">If I had to describe you with ONE word</h2>
+                <div class="gift-img" id="gift-img-genius"></div>
+            </div>
+            <div class="gift-section">
+                <h2>The only person as badass as you</h2>
+                <div class="gift-img" id="gift-img-badass"></div>
+            </div>
+            <div class="gift-section">
+                <h2 class="gift-title">This one's for you</h2>
+                <div class="gift-img" id="gift-img-cheers"></div>
+            </div>
             <p id="footer">Want to create your own Birthday GIFT site? Take <a href="https://scrimba.com/learn/htmlandcss">this HTML & CSS course</a></p>
-
+        </div>
+        
     </body>
 </html>
