--- a/BlackJack/index.html
+++ b/BlackJack/index.html
@@ -1,14 +1,17 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BlackJack Game</title>
         <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
         <h1>BlackJack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p>Cards:</p>
-        <p>Sum:</p>
-        <button id="start-btn" onclick="startGame()">Start Game</button>
+        <p id="card-el">Cards: </p>
+        <p id="sum-el">Sum: </p>
+        <button id="start-btn" onclick="startGame()">START GAME</button>
+        <button id="newCard-btn" onclick="newCard()">NEW CARD</button>
         <script src="index.js"></script>
     </body>
 </html>
